--- a/MvcApp/packages.config
+++ b/MvcApp/packages.config
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autofac" version="3.5.2" targetFramework="net45" />
-  <package id="Autofac.Mvc5" version="3.3.3" targetFramework="net45" />
+  <package id="CommonServiceLocator" version="1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc.ru" version="5.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net45" />
@@ -9,4 +8,8 @@
   <package id="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.ru" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Unity" version="3.5.1404.0" targetFramework="net45" />
+  <package id="Unity.Interception" version="3.5.1404.0" targetFramework="net45" />
+  <package id="Unity.Mvc" version="3.5.1404.0" targetFramework="net45" />
+  <package id="WebActivatorEx" version="2.0.5" targetFramework="net45" />
 </packages>
