--- a/MvcApp/packages.config
+++ b/MvcApp/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Common.Logging" version="2.3.1" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc.ru" version="5.1.3" targetFramework="net45" />
@@ -16,6 +17,7 @@
   <package id="Microsoft.AspNet.WebPages.ru" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
+  <package id="Quartz" version="2.3" targetFramework="net45" />
   <package id="Unity" version="3.5.1404.0" targetFramework="net45" />
   <package id="Unity.Interception" version="3.5.1404.0" targetFramework="net45" />
   <package id="Unity.Mvc" version="3.5.1404.0" targetFramework="net45" />
