--- a/DataBaseLayer/DataBaseLayer.csproj
+++ b/DataBaseLayer/DataBaseLayer.csproj
@@ -42,6 +42,8 @@
   <ItemGroup>
     <Compile Include="DataBase.cs" />
     <Compile Include="DataBaseManager.cs" />
+    <Compile Include="DbContext.cs" />
+    <Compile Include="DBSet.cs" />
     <Compile Include="IDataReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
