--- a/LogicLayer/LogicLayer.csproj
+++ b/LogicLayer/LogicLayer.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DatabaseHelper.cs" />
+    <Compile Include="Entities\DBEntities.cs" />
     <Compile Include="IDatabaseHelper.cs" />
     <Compile Include="Models\Role.cs" />
     <Compile Include="Models\User.cs" />
