--- a/MvcApp/packages.config
+++ b/MvcApp/packages.config
@@ -22,5 +22,6 @@
   <package id="Unity" version="3.5.1404.0" targetFramework="net45" />
   <package id="Unity.Interception" version="3.5.1404.0" targetFramework="net45" />
   <package id="Unity.Mvc" version="3.5.1404.0" targetFramework="net45" />
+  <package id="Unity.Mvc4" version="1.4.0.0" targetFramework="net451" />
   <package id="WebActivatorEx" version="2.0.5" targetFramework="net45" />
 </packages>
