--- a/MvcApp/Web.config
+++ b/MvcApp/Web.config
@@ -22,6 +22,7 @@
       </system.Web>
   -->
   <system.web>
+    <authentication mode="Forms"></authentication>
     <compilation debug="true" targetFramework="4.5.1" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
