--- a/MvcApp/bin/MvcApp.dll.config
+++ b/MvcApp/bin/MvcApp.dll.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="ProjectDB" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=D:\EpamProject\MvcApp\App_Data\EpamProject.mdf;Integrated Security=True" />
+    <add name="ProjectDB" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=D:\TRAINING EPAM\PROJECT\MVCAPP\APP_DATA\EPAMPROJECT.MDF;Integrated Security=True" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
