Added check if the user is not authorized then it is available only home page Added validation fields on the client side

--- a/LogicLayer/LogicLayer.csproj
+++ b/LogicLayer/LogicLayer.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="DatabaseHelper.cs" />
     <Compile Include="Entities\DBEntities.cs" />
+    <Compile Include="LoginValidate.cs" />
     <Compile Include="IDatabaseHelper.cs" />
     <Compile Include="Models\Role.cs" />
     <Compile Include="Models\User.cs" />
