--- a/MvcApp/MvcApp.csproj
+++ b/MvcApp/MvcApp.csproj
@@ -125,10 +125,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Data\EpamProject.mdf" />
-    <Content Include="App_Data\EpamProject_log.ldf">
-      <DependentUpon>EpamProject.mdf</DependentUpon>
-    </Content>
+    <Content Include="App_Data\EpamProjectData.mdf" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
