--- a/MvcApp/packages.config
+++ b/MvcApp/packages.config
@@ -5,7 +5,9 @@
   <package id="bootstrap" version="3.0.0" targetFramework="net451" />
   <package id="CommonServiceLocator" version="1.2" targetFramework="net45" />
   <package id="jQuery" version="2.1.1" targetFramework="net451" />
+  <package id="jquery.jstree" version="3.0.8.2" targetFramework="net451" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net451" />
+  <package id="jsTree" version="3.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc.ru" version="5.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net45" />
