--- a/MvcApp/packages.config
+++ b/MvcApp/packages.config
@@ -6,6 +6,7 @@
   <package id="CommonServiceLocator" version="1.2" targetFramework="net45" />
   <package id="jQuery" version="2.1.1" targetFramework="net451" />
   <package id="jquery.jstree" version="3.0.8.2" targetFramework="net451" />
+  <package id="jQuery.UI.Combined" version="1.11.2" targetFramework="net451" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net451" />
   <package id="jsTree" version="3.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.1.3" targetFramework="net45" />
