--- a/MvcApp/Web.config
+++ b/MvcApp/Web.config
@@ -22,7 +22,11 @@
       </system.Web>
   -->
   <system.web>
-    <authentication mode="Forms"></authentication>
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/Login" timeout="2880" />
+    </authentication>
+    <roleManager enabled="true">
+      </roleManager>
     <compilation debug="true" targetFramework="4.5.1" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
