--- a/MvcApp/MvcApp.csproj
+++ b/MvcApp/MvcApp.csproj
@@ -965,8 +965,9 @@
     <Content Include="Scripts\myScripts\angular.treeview.js" />
     <Content Include="Scripts\myScripts\jquery-1.10.2.js" />
     <Content Include="Scripts\myScripts\angular.js" />
-    <Content Include="Scripts\myScripts\tabs.js" />
-    <Content Include="Scripts\myScripts\tabsCtrl.js" />
+    <Content Include="Scripts\myScripts\modalCompareCtrl.js" />
+    <Content Include="Scripts\myScripts\modalRecordCompare.js" />
+    <Content Include="Scripts\myScripts\recordCtrl.js" />
     <Content Include="Scripts\themes\default\32px.png" />
     <Content Include="Scripts\themes\default\40px.png" />
     <Content Include="Scripts\themes\jquery-ui.css" />
@@ -981,6 +982,7 @@
     <Content Include="Scripts\ui.bootstrap\ui-bootstrap-custom-0.12.0.min.js" />
     <Content Include="Scripts\ui.bootstrap\ui-bootstrap-custom-tpls-0.12.0.js" />
     <Content Include="Scripts\ui.bootstrap\ui-bootstrap-custom-tpls-0.12.0.min.js" />
+    <Content Include="Scripts\ui.bootstrap\ui-bootstrap-tpls-0.12.0.min.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -1015,8 +1017,6 @@
     <Content Include="Scripts\jquery-2.1.1.min.map" />
     <Content Include="Scripts\version.json" />
     <Content Include="Views\CatalogView\Index.cshtml" />
-    <Content Include="Views\CatalogView\_RecordView.cshtml" />
-    <Content Include="Views\CatalogView\Compare.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
