--- a/ProjectForEpam-ValikBranch/MvcApp/MvcApp.csproj
+++ b/ProjectForEpam-ValikBranch/MvcApp/MvcApp.csproj
@@ -127,9 +127,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\EpamProject.mdf" />
-    <Content Include="App_Data\EpamProject_log.ldf">
-      <DependentUpon>EpamProject.mdf</DependentUpon>
-    </Content>
+    <Content Include="App_Data\EpamProject_log.ldf" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
