--- a/MvcApp/packages.config
+++ b/MvcApp/packages.config
@@ -13,6 +13,10 @@
   <package id="Microsoft.AspNet.Mvc.ru" version="5.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor.ru" version="3.2.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.SignalR" version="2.1.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.1.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="2.1.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.1.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Client.ru" version="5.2.2" targetFramework="net451" />
@@ -26,9 +30,13 @@
   <package id="Microsoft.AspNet.WebPages.ru" version="3.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages.WebData" version="3.2.2" targetFramework="net451" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.2" targetFramework="net451" />
+  <package id="Microsoft.Owin" version="3.0.0" targetFramework="net451" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.0" targetFramework="net451" />
+  <package id="Microsoft.Owin.Security" version="3.0.0" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.8.3" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net451" />
+  <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="Unity" version="3.5.1404.0" targetFramework="net45" />
   <package id="Unity.AspNet.WebApi" version="3.5.1404.0" targetFramework="net451" />
   <package id="Unity.Interception" version="3.5.1404.0" targetFramework="net45" />
