--- a/MvcApp/MvcApp.csproj
+++ b/MvcApp/MvcApp.csproj
@@ -1093,8 +1093,9 @@
     <Content Include="Scripts\jquery-2.1.1.min.map" />
     <Content Include="Views\CatalogView\Index.cshtml" />
     <Content Include="Scripts\version.json" />
-    <Content Include="Views\Account\Account1.cshtml" />
-    <Content Include="Views\Account\Account.cshtml" />
+    <Content Include="Views\Account\ProfileInformation.cshtml" />
+    <Content Include="Views\Shared\_AccountPartial.cshtml" />
+    <Content Include="Views\Account\Chat.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
