Adding like system, adding status for notes. Fix bugs with clear id.

--- a/LogicLayer/LogicLayer.csproj
+++ b/LogicLayer/LogicLayer.csproj
@@ -55,6 +55,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CatalogManager\CatalogManager.cs" />
+    <Compile Include="StatusOfNote.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>StatusOfNote.resx</DependentUpon>
+    </Compile>
     <Compile Include="IDataBaseManager.cs" />
     <Compile Include="CatalogManager\ITree.cs" />
     <Compile Include="CatalogManager\InitializeTree.cs" />
@@ -99,6 +104,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="StatusOfNote.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>StatusOfNote.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
