--- a/.gitignore
+++ b/.gitignore
@@ -186,3 +186,11 @@ MvcApp/bin/LoggingManager.dll
 MvcApp/bin/LogicLayer.dll
 MvcApp/bin/MvcApp.dll
 MvcApp/MvcApp.csproj
+EpamProject.v12.suo
+EpamProject.v12.suo
+LogicLayer/LogicLayer.csproj
+MvcApp/bin/DataBaseLayer.dll
+MvcApp/bin/LoggingManager.dll
+MvcApp/bin/LogicLayer.dll
+MvcApp/bin/MvcApp.dll
+MvcApp/MvcApp.csproj
