--- a/MvcApp/MvcApp.csproj
+++ b/MvcApp/MvcApp.csproj
@@ -1055,7 +1055,7 @@
     <Content Include="Scripts\myCSS\animate.min.css" />
     <Content Include="Scripts\myScripts\addNoteCtrl.js" />
     <Content Include="Scripts\myScripts\angular.treeview.js" />
-    <Content Include="Scripts\myScripts\Chat.js" />
+    <Content Include="Scripts\myScripts\editUserCtrl.js" />
     <Content Include="Scripts\myScripts\jquery-1.10.2.js" />
     <Content Include="Scripts\myScripts\angular.js" />
     <Content Include="Scripts\myScripts\modalCompareCtrl.js" />
