--- a/MvcApp/MvcApp.csproj
+++ b/MvcApp/MvcApp.csproj
@@ -1108,6 +1108,7 @@
     <Compile Include="Hubs\MessageHub.cs" />
     <Compile Include="Models\Account\AccountViewModels.cs" />
     <Compile Include="Models\UsersAndGroups.cs" />
+    <Compile Include="Models\UsersForChat.cs" />
     <Compile Include="NoteAvatars.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
