Add chatCtrl and mainCtrl

--- a/MvcApp/MvcApp.csproj
+++ b/MvcApp/MvcApp.csproj
@@ -1055,10 +1055,12 @@
     <Content Include="Scripts\myCSS\animate.min.css" />
     <Content Include="Scripts\myScripts\addNoteCtrl.js" />
     <Content Include="Scripts\myScripts\angular.treeview.js" />
+    <Content Include="Scripts\myScripts\chatCtrl.js" />
     <Content Include="Scripts\myScripts\editUserCtrl.js" />
     <Content Include="Scripts\myScripts\Autocomplete.js" />
     <Content Include="Scripts\myScripts\jquery-1.10.2.js" />
     <Content Include="Scripts\myScripts\angular.js" />
+    <Content Include="Scripts\myScripts\mainCtrl.js" />
     <Content Include="Scripts\myScripts\messageCtrl.js" />
     <Content Include="Scripts\myScripts\modalCompareCtrl.js" />
     <Content Include="Scripts\myScripts\modalRecordCompare.js" />
